<resources>
    <string name="app_name">ejercicio1CM</string>
    <string name="sapat">Introduce tu apellido paterno:</string>
    <string name="samat">Tu apellido materno:</string>
    <string name="snombre">Y tu nombre(s):</string>
    <string name="sfecha">Ingresa tu fecha de nacimiento</string>
    <string name="sbotton">Validar RFC</string>
    <string name="etap">Ej: Calderón</string>
    <string name="etam">Ej: Carbajal</string>
    <string name="etn">Ej: Eduardo</string>
    <string name="etfn">Pulsa aquí para seleccionar fecha</string>
    <string name="eetver">Verifica los datos</string>
    <string name="eetnv">Campo nombre vacío</string>
    <string name="eetapv">Campo apellido paterno vacío</string>
    <string name="eetamv">Campo apellido materno vacio</string>
    <string name="eetnin">Nombre incompleto</string>
    <string name="eethcr">Horóscopo chino:Rata</string>
    <string name="eetapin">Apellido paterno incompleto</string>
    <string name="eetamin">Apellido materno incompleto</string>
    <string name="tuv">Usurio validado</string>
    <string name="tcn">Cadena numerica</string>
    <string name="tedad">Tu edad es:</string>
    <string name="tanos">años</string>
    <string name="tnovivido">año no vivido</string>
    <string name="thcb">Horóscopo chino:Buey</string>
    <string name="thct">Horóscopo chino:Tigre</string>
    <string name="thcc">Horóscopo chino:Conejo</string>
    <string name="thcd">Horóscopo chino:Dragón</string>
    <string name="thcs">Horóscopo chino:Serpiente</string>
    <string name="thcca">Horóscopo chino:Caballo</string>
    <string name="thccabra">Horóscopo chino:Cabra</string>
    <string name="thcm">Horóscopo chino:Mono</string>
    <string name="thcg">Horsócopo chino:Gallo</string>
    <string name="thcp">Horóscopo chino:Perro</string>
    <string name="thcchancho">Horóscopo chino:Chancho</string>
    <string name="invyear">Año desconocido</string>
    <string name="tszc">Signo zodiacal:Capricornio</string>
    <string name="tszac">Signo zodiacal:Acuario</string>
    <string name="tszp">Signo zodiacal:Piscis</string>
    <string name="tszar">Signo zodiacal:Aries</string>
    <string name="tszt">Signo zodiacal:Tauro</string>
    <string name="tszg">Signo zodiacal:Géminis</string>
    <string name="tszcan">Signo zodiacal:Cáncer</string>
    <string name="tszl">Signo zodiacal:Leo</string>
    <string name="tszv">Signo zodiacal:Virgo</string>
    <string name="tszli">Signo zodiacal:Libra</string>
    <string name="tsze">Signo zodiacal:Escorpio</string>
    <string name="tszsa">Signo zodiacal:Sagitario</string>
    <string name="tszcap">Signo zodiacal:Capricornio</string>
    <string name="tfe">Formato erróneo</string>
    <string name="brfc">RFC:</string>
    <string name="t0">0</string>
</resources>